--- a/Solution1/eStore/Views/Members/Create.cshtml
+++ b/Solution1/eStore/Views/Members/Create.cshtml
@@ -1,5 +1,17 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model BussinessObject.Models.Member
+
 @{
+    ViewData["Title"] = "Create";
 }
+
+<h1>Create</h1>
+
+<h4>Member</h4>
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Create">
+
+        </form>
+    </div>
+</div>
