--- a/Solution1/eStore/Views/Products/Details.cshtml
+++ b/Solution1/eStore/Views/Products/Details.cshtml
@@ -1,12 +1,11 @@
 ﻿@model BussinessObject.Models.Product
 
 @{
-     ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Product</h4>
     <hr />
@@ -42,10 +41,8 @@
             @Html.DisplayFor(model => model.UnitslnStock)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.ProductId">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
