--- a/Solution1/eStore/wwwroot/css/login.css
+++ b/Solution1/eStore/wwwroot/css/login.css
@@ -1,241 +1,152 @@
-﻿/*6B5CFF*/
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;700&display=swap');
-
-:root {
-    --mainColor: #6B5CFF;
-}
+﻿@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body {
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-
-
-.wave {
-    position: fixed;
-    height: 100%;
-    left: 0;
-    bottom: 0;
-    z-index: -1;
-}
-
-.container {
-    width: 100vw;
-    height: 100vh;
+html, body {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 7rem;
-    padding: 0 2rem;
-}
-
-.img {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-    .img img {
-        width: 500px;
-    }
-
-.login-container {
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-
-form {
-    width: 360px;
-    text-transform: uppercase;
-}
-
-.avatar {
-    width: 100px;
-}
-
-form h2 {
-    font-size: 2.9rem;
-    text-transform: uppercase;
-    margin: 15px 0;
-    color: #333;
-}
-
-.input-div {
-    position: relative;
-    display: grid;
-    grid-template-columns: 7% 93%;
-    margin: 25px 0;
-    padding: 5px 0;
-    border-bottom: 2px so lid #d9d9d9;
-    text-decoration: none;
-    outline: none;
-}
-
-    .input-div:after,
-    .input-div:before {
-        content: '';
-        position: absolute;
-        bottom: -2px;
-        width: 0;
-        height: 2px;
-        background-color: var(--mainColor);
-        transition: .3s;
-        outline: none;
-    }
-
-    .input-div:after {
-        right: 50%;
-    }
-
-    .input-div:before {
-        left: 50%;
-    }
-
-    .input-div.focus .i i {
-        color: var(--mainColor);
-    }
-
-    .input-div.focus div h5 {
-        top: -5px;
-        font-size: 10px;
-    }
-
-    .input-div.focus:after,
-    .input-div.focus:before {
-        width: 50%;
-    }
-
-    .input-div.one {
-        margin-top: 0;
-    }
-
-    .input-div.two {
-        margin-bottom: 4px;
-    }
-
-.i {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-    .i i {
-        color: #d9d9d9;
-        transition: .3s;
-    }
-
-.input-div > div {
-    position: relative;
-    height: 45px;
-}
-
-    .input-div > div h5 {
-        position: absolute;
-        left: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-        color: #999;
-        font-size: 18px;
-        transition: .3s;
-    }
-
-
-.input {
-    position: absolute;
-    outline: 0;
-    width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
-    border: none;
-    background: none;
-    padding: 0.5rem 0.7rem;
-    font-size: 1.2rem;
-    color: #555;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-a {
-    display: block;
-    text-align: center;
-    text-decoration: none;
-    color: #999;
-    font-size: 0.7rem;
-    letter-spacing: 3px;
-    transition: .3s;
-    margin: 20px;
-}
-
-    a:hover {
-        color: var(--mainColor);
-    }
-
-.btn {
-    display: block;
     width: 100%;
-    height: 40px;
-    border-radius: 25px;
-    text-transform: uppercase;
-    background-color: var(--mainColor);
-    color: white;
-    border: none;
-    letter-spacing: 1px;
-    margin-top: 20px;
-    transition: .5s;
+    place-items: center;
+    background: #f2f2f2;
+    /* background: linear-gradient(-135deg, #c850c0, #4158d0); */
 }
 
-    .btn:hover {
-        background-color: #5245ca;
-    }
-
-@media screen and (max-width: 1000px) {
-    form {
-        width: 290px;
-    }
-
-    .login-container h2 {
-        font-size: 2.4rem;
-        margin: 8px 0;
-    }
-
-    .img img {
-        width: 400px;
-    }
+::selection {
+    background: #4158d0;
+    color: #fff;
 }
 
-@media screen and (max-width: 900px) {
-    body {
-        background-color: var(--mainColor);
+.wrapper {
+    width: 380px;
+    background: #fff;
+    border-radius: 15px;
+    box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
+}
+
+    .wrapper .title {
+        font-size: 35px;
+        font-weight: 600;
+        text-align: center;
+        line-height: 100px;
+        color: #fff;
+        user-select: none;
+        border-radius: 15px 15px 0 0;
+        background: linear-gradient(-135deg, #c850c0, #4158d0);
     }
 
-    .container {
-        grid-template-columns: 1fr;
+    .wrapper form {
+        padding: 10px 30px 50px 30px;
     }
 
-    .img {
-        display: none;
-    }
+        .wrapper form .field {
+            height: 50px;
+            width: 100%;
+            margin-top: 20px;
+            position: relative;
+        }
 
-    .wave {
-        display: none;
-    }
+            .wrapper form .field input {
+                height: 100%;
+                width: 100%;
+                outline: none;
+                font-size: 17px;
+                padding-left: 20px;
+                border: 1px solid lightgrey;
+                border-radius: 25px;
+                transition: all 0.3s ease;
+            }
 
-    .login-container {
+                .wrapper form .field input:focus,
+                form .field input:valid {
+                    border-color: #4158d0;
+                }
+
+            .wrapper form .field label {
+                position: absolute;
+                top: 50%;
+                left: 20px;
+                color: #999999;
+                font-weight: 400;
+                font-size: 17px;
+                pointer-events: none;
+                transform: translateY(-50%);
+                transition: all 0.3s ease;
+            }
+
+form .field input:focus ~ label,
+form .field input:valid ~ label {
+    top: 0%;
+    font-size: 16px;
+    color: #4158d0;
+    background: #fff;
+    transform: translateY(-50%);
+}
+
+form .content {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    font-size: 16px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+    form .content .checkbox {
+        display: flex;
+        align-items: center;
         justify-content: center;
-        color: var(--mainColor);
     }
 
-    .form-login {
-        padding: 40px;
-        background-color: #fff;
-        width: 420px;
-        border-radius: 8px;
-        box-shadow: 3px 3px 15px rgba(88, 34, 160, 0.2);
+    form .content input {
+        width: 15px;
+        height: 15px;
+        background: red;
     }
+
+    form .content label {
+        color: #262626;
+        user-select: none;
+        padding-left: 5px;
+    }
+
+    form .content .pass-link {
+        color: "";
+    }
+
+form .field input[type="submit"] {
+    color: #fff;
+    border: none;
+    padding-left: 0;
+    margin-top: -10px;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    transition: all 0.3s ease;
 }
+
+    form .field input[type="submit"]:active {
+        transform: scale(0.95);
+    }
+
+form .signup-link {
+    color: #262626;
+    margin-top: 20px;
+    text-align: center;
+}
+
+    form .pass-link a,
+    form .signup-link a {
+        color: #4158d0;
+        text-decoration: none;
+    }
+
+        form .pass-link a:hover,
+        form .signup-link a:hover {
+            text-decoration: underline;
+        }
