Fix appear value memberId in index Order

--- a/Solution1/eStore/Views/Orders/Details.cshtml
+++ b/Solution1/eStore/Views/Orders/Details.cshtml
@@ -38,7 +38,7 @@
             @Html.DisplayNameFor(model => model.Member)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Member.City)
+            @Html.DisplayFor(model => model.Member.MemberId)
         </dd>
     </dl>
 </div>
