--- a/Solution1/eStore/Views/Products/Edit.cshtml
+++ b/Solution1/eStore/Views/Products/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@*@model BussinessObject.Models.Product
+﻿@model BussinessObject.Models.Product
 
 @{
     ViewData["Title"] = "Edit";
@@ -44,5 +44,5 @@
             </div>
         </form>
     </div>
-</div>*@
+</div>
 
