--- a/Solution1/eStore/Views/Products/Index.cshtml
+++ b/Solution1/eStore/Views/Products/Index.cshtml
@@ -14,9 +14,10 @@
 
 <form asp-controller="Products" asp-action="Index">
     <p>
-        Search by Name: <input type="text" name="SearchString" />
+        Search by Name: <input type="text" name="searchString" />
         Unit Price: <input type="number" name="UnitPrice" min="0" value="0" />
-        <input type="submit" value="Filter" /> <br />
+        <input type="submit" value="Search" /> <br />
+        
     </p>
 </form>
 
