--- a/Solution1/eStore/Views/Orders/ViewOrders.cshtml
+++ b/Solution1/eStore/Views/Orders/ViewOrders.cshtml
@@ -62,7 +62,7 @@
                     @Html.DisplayFor(modelItem => item.Freight)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Member.City)
+                    @Html.DisplayFor(modelItem => item.Member.MemberId)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.OrderId">Edit</a> |
