fix login change color

--- a/Solution1/eStore/Views/Login/Login.cshtml
+++ b/Solution1/eStore/Views/Login/Login.cshtml
@@ -16,7 +16,7 @@
     <form asp-controller="login" asp-action="checklogin">
        <div class="field">
           <input type="text" name="email" required>
-          <label>Email Address</label>
+          <label>Email</label>
        </div>
        <div class="field">
           <input type="password" name="password" required>
@@ -34,7 +34,7 @@
        <div class="field">
           <input type="submit" value="login">
        </div>
-       <div class="signup-link">
+       <div style="color:red"  class="signup-link">
           Not a member? <a href="#">Signup now</a>
        </div>
     </form>
