--- a/Solution1/eStore/Views/Shared/_Layout.cshtml
+++ b/Solution1/eStore/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                         else if (Context.Session.GetString("role") == "User")
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Home">View Profile</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">View Profile</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="OrderHistory">View Order History</a>
