--- a/Solution1/eStore/Views/User/Edit.cshtml
+++ b/Solution1/eStore/Views/User/Edit.cshtml
@@ -48,7 +48,7 @@
 </div>
 
 <div>
-    <a asp-action="Home">Back to List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
