--- a/Solution1/eStore/Views/User/Index.cshtml
+++ b/Solution1/eStore/Views/User/Index.cshtml
@@ -45,4 +45,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.MemberId">Edit</a>
+    <a asp-action="Index">Back to List</a>
 </div>
